# obs-studio

plugins/: CMakeLists.txt
plugins/obs-python/: CMakeLists.txt  obs-python-module.c  obs-python-module.h  py-obs.h  py-source.h  utils.h
plugins/obs-python/swig/: CMakeLists.txt  obspython.i
